# dejavu

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  command_output_case.md  feature_request.md  unsafe_behavior.md
.github/workflows/: ci.yml  release.yml
demo/: README.md  dejavu.tape  run-demo.sh  session.sh
docs/: BENCHMARK.md  CLI.md  COMPARISON.md  INSTALL.md  RELEASING.md  SAFETY.md
docs/examples/: docker-logs.md  git-diff.md  pnpm-test.md  rg-search.md  tsc.md
npm/: README.md  install.js  package.json
npm/lib/: download.js
packaging/homebrew/: dejavu.rb
scripts/: bootstrap-cli-clean.sh  bootstrap-cli.sh  render-benchmark-chart.py  render-homebrew-formula.sh
src/: env.rs  error.rs  lib.rs  repo.rs  state.rs  util.rs
src/agent/: launcher.rs  mod.rs
src/cli/: dejavu_cli.rs  mod.rs
src/commands/: bench.rs  clean.rs  doctor.rs  grep.rs  init.rs  mod.rs  render.rs  repos.rs  shellenv.rs  show.rs  stats.rs
src/config/: defaults.rs  mod.rs
src/exec/: classify.rs  command_key.rs  interactive.rs  mod.rs  path.rs  resolve.rs  shim.rs  spawn.rs
src/paths/: layout.rs  mod.rs
src/reduce/: classify.rs  compare.rs  envelope.rs  generic.rs  mod.rs  normalize.rs  redact.rs
src/reduce/parsers/: dockerlogs.rs  (+10 more)
src/runtime/: mod.rs
src/store/: db.rs  logs.rs  mod.rs  models.rs  schema.rs  session.rs
tests/: bench_repro.rs  capture_storage.rs  git_policy.rs  intercept_extra.rs  reduction_states.rs  repos.rs  shellenv.rs  stats_all.rs  walking_skeleton.rs
tests/common/: mod.rs
